# ai-content-organizer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.venv-ci/: pyvenv.cfg
dashboard/: app.py
src/ai_content_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_content_organizer/cli/: cli.py
src/ai_content_organizer/core/: ai_provider.py
src/ai_content_organizer/models/: schemas.py
src/ai_content_organizer/parsers/: file_parsers.py
src/ai_content_organizer/summarizers/: ai_provider.py  summarizer.py
tests/unit/: test_schemas_and_parsers.py
web/backend/: .env.example  requirements.txt
web/backend/app/: __init__.py  ai_service.py  config.py  main.py
web/frontend/: index.html  package.json
web/frontend/src/: App.jsx
