[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-content-organizer"
version = "0.1.0"
description = "AI-powered content organizer and summarizer with CLI and Web Dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alan", email = "alan@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.7",
    "pypdf>=4.0",
    "google-generativeai>=0.7",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
cli = ["typer>=0.12"]
dashboard = ["streamlit>=1.35"]
all = ["typer>=0.12", "streamlit>=1.35"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
ai-content-organizer = "ai_content_organizer.cli.cli:run_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_content_organizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "UP042"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
reportMissingImports = false
reportUnusedImport = true
reportUnusedVariable = true
typeCheckingMode = "standard"